<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/top_tv_info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/top_tv_info1"
        />

    <TextView
        android:id="@+id/top_tv_info1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:text="@string/top_tv_info1_1"
        android:layout_below="@id/top_tv_info1"
        />

    <TextView
        android:id="@+id/top_tv_info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingBottom="5dp"
        android:text="@string/top_tv_info2"
        android:layout_below="@id/top_tv_info1_1"
        />

    <TextView
        android:id="@+id/top_border1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#888888"
        android:layout_below="@id/top_tv_info2"
        />

    <Button
        android:id="@+id/top_button_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top_border1"
        android:text="@string/top_label_load_button"
        />


    <Button
        android:id="@+id/top_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/top_border1"
        android:text="@string/top_label_next_button"
        />

    <ListView
        android:id="@+id/top_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_button_next">

    </ListView>


</RelativeLayout>
